--- a/app/assets/stylesheets/themes/default.css.scss
+++ b/app/assets/stylesheets/themes/default.css.scss
@@ -1,8 +1,8 @@
-$body-bg: #fff;
+$body-bg: #f6f2ed;
 $text-color: #151515;
 $selection-color: #fff;
 
-$theme: #794eb9;
+$theme: #4f6361;
 $theme-light: lighten($theme, 14%);
 
 $width: 620px;
